@@ -28,8 +28,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
-
-
 @WebMvcTest(playerController.class)
 @AutoConfigureMockMvc
 public class playerControllerTests {
@@ -61,8 +59,17 @@ public class playerControllerTests {
     }
 
     @Test
+    public void testPlayer_POST_ERROR() throws Exception {
+        mvc.perform(post("/rooms/123/players")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(testUtils.createJSON("wrongKey", testPlayer.getName())))
+                .andDo(print())
+                .andExpect(status().isNotFound());
+    }
+
+    @Test
     public void testPlayer_GET() throws Exception {
-        testPlayer.setCurDeck(new deck(false, 1));
+        testPlayer.setCurDeck(new deck(false));
         ArrayList<card> testDraw = testPlayer.drawCards(1);
         when(gameService.getPlayer(anyString(), anyString())).thenReturn(testPlayer);
 
@@ -90,10 +97,19 @@ public class playerControllerTests {
                 .andExpect(jsonPath("$.name").value(newName));
     }
 
+    @Test
+    public void testPlayer_PUT_updateName_ERROR() throws Exception {
+        mvc.perform(put("/rooms/123/players/123")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(testUtils.createJSON("wrongKey", "newName"))
+                .accept(MediaType.APPLICATION_JSON))
+                .andDo(print())
+                .andExpect(status().isBadRequest());
+    }
 
     @Test
     public void testPlayer_PUT_drawCard() throws Exception {
-        testPlayer.setCurDeck(new deck(false, 1));
+        testPlayer.setCurDeck(new deck(false));
         ArrayList<card> testDraw = testPlayer.drawCards(1);
         when(gameService.drawCards(anyString(), anyString(), anyInt())).thenReturn(testPlayer);
 
@@ -110,15 +126,32 @@ public class playerControllerTests {
     }
 
     @Test
+    public void testPlayer_PUT_drawCard_ERROR() throws Exception {
+        mvc.perform(put("/rooms/123/players/123")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(testUtils.createJSON("wrongKey", "1"))
+                .accept(MediaType.APPLICATION_JSON))
+                .andDo(print())
+                .andExpect(status().isBadRequest());
+
+        mvc.perform(put("/rooms/123/players/123")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(testUtils.createJSON("draw", "wrongValue"))
+                .accept(MediaType.APPLICATION_JSON))
+                .andDo(print())
+                .andExpect(status().isBadRequest());
+    }
+
+    @Test
     public void testPlayer_PUT_playCard() throws Exception {
-        testPlayer.setCurDeck(new deck(false, 1));
+        testPlayer.setCurDeck(new deck(false));
         testPlayer.drawCards(1);
         testPlayer.playCard(testPlayer.getCardList().get(0));
         when(gameService.playCard(anyString(), anyString(), anyString(), anyString(), anyString(), anyString())).thenReturn(testPlayer);
 
         String content = testUtils.createJSON(
-                new ArrayList<>(List.of("cardType", "cardColor", "cardValue", "wildColor")),
-                new ArrayList<String>(Arrays.asList("Basic", "Green", "6", "")));
+                new ArrayList<>(List.of("cardType", "cardColor", "cardValue", "setWildColor")),
+                new ArrayList<>(Arrays.asList("Basic", "Green", "6", "")));
 
         mvc.perform(put("/rooms/123/players/123")
                 .contentType(MediaType.APPLICATION_JSON)
@@ -129,5 +162,18 @@ public class playerControllerTests {
                 .andExpect(jsonPath("$.cardList").isArray())
                 .andExpect(jsonPath("$.cardList", hasSize(0)));
     }
-}
 
+    @Test
+    public void testPlayer_PUT_playCard_ERROR() throws Exception {
+        String content = testUtils.createJSON(
+                new ArrayList<>(List.of("cardType", "cardColor", "cardValue")),
+                new ArrayList<>(Arrays.asList("Basic", "Green", "6")));
+
+        mvc.perform(put("/rooms/123/players/123")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(content)
+                .accept(MediaType.APPLICATION_JSON))
+                .andDo(print())
+                .andExpect(status().isBadRequest());
+    }
+}
